# Chim

./: .clang-format  .gitignore  CMakeLists.txt  basic.vert  chim.cpp  chim.hpp  main.cpp  path_config.h
docs/: README.md
shaders/: basic.vert  compile.bat  vert.spv
